agregando los datos de ingreso

--- a/resource/resource/src/main/resources/application.properties
+++ b/resource/resource/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/estudiante
 spring.datasource.username=postgres
-spring.datasource.password=Morales1509*
+spring.datasource.password=Lmd34015
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
