--- a/frontend/recursos/angular.json
+++ b/frontend/recursos/angular.json
@@ -26,6 +26,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/sweetalert2/dist/sweetalert2.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
