--- a/frontend/recursos/package.json
+++ b/frontend/recursos/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
