modificando Datos FTD del Backend y frontend. Agregar vistas a los datos auxiliares. agregar datos FTD

--- a/resource/resource/src/main/resources/application.properties
+++ b/resource/resource/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 server.port=8081
 
+spring.jpa.database=postgresql
+spring.jps.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.deiver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/estudiante
 spring.datasource.username=postgres
 spring.datasource.password=Lmd34015
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=debug
 
 server.error.include-message=always
