--- a/frontend/recursos/package.json
+++ b/frontend/recursos/package.json
@@ -20,8 +20,11 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
+    "pdf-lib": "^1.17.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
+    "signature_pad": "^4.1.7",
     "sweetalert2": "^11.10.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
