--- a/frontend/recursos/package.json
+++ b/frontend/recursos/package.json
@@ -21,7 +21,9 @@
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
+    "node-signpdf": "^3.0.0",
     "pdf-lib": "^1.17.1",
+    "pdf2pic": "^3.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "signature_pad": "^4.1.7",
