--- a/resource/resource/src/main/resources/application.properties
+++ b/resource/resource/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.deiver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/estudiante
 spring.datasource.username=postgres
-spring.datasource.password=Lmd34015
+spring.datasource.password=Morales1509*
 logging.level.org.hibernate.SQL=debug
 
 server.error.include-message=always
