Eliminacion Logica a Plan-Tramite

--- a/resource/resource/src/main/resources/application.properties
+++ b/resource/resource/src/main/resources/application.properties
@@ -2,12 +2,12 @@ server.port=8081
 
 spring.jpa.database=postgresql
 spring.jps.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.deiver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/estudiante
 spring.datasource.username=postgres
-spring.datasource.password=Lmd34015
+spring.datasource.password=Morales1509*
 logging.level.org.hibernate.SQL=debug
 
 server.error.include-message=always
