--- a/frontend/recursos/package.json
+++ b/frontend/recursos/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.2",
+    "crypto-js": "^4.2.0",
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
     "node-signpdf": "^3.0.0",
@@ -28,13 +29,14 @@
     "rxjs": "~7.8.0",
     "signature_pad": "^4.1.7",
     "sweetalert2": "^11.10.1",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
