--- a/resource/resource/src/main/resources/application.properties
+++ b/resource/resource/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 spring.jpa.database=postgresql
 spring.jps.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.deiver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/estudiante
