--- a/resource/resource/pom.xml
+++ b/resource/resource/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.2.1</version>
+        </dependency>
     </dependencies>
 
 	<build>
